--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -74,10 +74,13 @@ form.neatForm label{
 }
 
 .neatForm70{
-	float:left;
-	width:60px;
-	font-weight:bold;
+	float:left; width:70px; font-weight:bold;
 }
+
+.neatForm80{
+	float:left; width:80px; font-weight:bold;
+}
+
 
 ul.buttonList {
 	list-style:none;
@@ -185,6 +188,16 @@ a.prevnext:hover {
 {
 	float: left;
 }
+
+
+div.simpleSectionLight {
+	width: 400px;
+	border: solid 1px lightgray;
+	border-radius: 4px;
+	padding:5px;
+	background:#f9f9f9;
+}
+
 
 div.simpleSection {
 	width: 400px;
