--- a/app/webroot/css/TimePicker.css
+++ b/app/webroot/css/TimePicker.css
@@ -1,16 +1,37 @@
 
+ul.TimePicker li 						{ list-style:none; }
+ul.TimePicker						{font:normal 12px arial; color:#444; padding:0px; width:200px; }
+ul.TimePicker ul li						{padding:0px; background:white;}
 
-ul.TimePicker					{font:normal 12px helvetica; color:black; padding:0px;width:200px; }
-ul.TimePicker ul				{padding:0px;}
-ul.TimePicker li				{list-style:none; padding:2px; border:1px solid lightgray; background:white; }
-ul.TimePicker li li:hover			{background:gray; color:white;}
+ul.TimePicker > li > ul > li:nth-child(odd)	{padding:2px; border:1px solid lightgray;  
+											background: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#eee));
+											background-image: -moz-linear-gradient(top, #f5f5f5, #eee);}
+ul.TimePicker > li > ul > li:nth-child(odd):hover {background:gray; color:white;}
 
-ul.TimePicker li ul li 				{float:left; width:75px; cursor:pointer; position:relative; height:15px;}
-ul.TimePicker li ul li ul li 			{float:none; z-index:10; background:white; color:black; width:50px;padding:2px 15px 2px 5px ; }
-ul.TimePicker li ul li ul li:hover 		{background:gray;}
-ul.TimePicker li.arrow 				{display:block; width:10px; }
-ul.TimePicker li ul li+li.arrow:hover ul 	{display:block; left:10px; top:5px;}
-ul.TimePicker ul ul 				{position:absolute; display:none; left:100px;}
+
+ul.TimePicker > li > ul > li:nth-child(even) {background:white;}
+
+
+ul.TimePicker li li:hover				{background:gray; color:white;}
+
+/* primary list time cells*/
+ul.TimePicker li ul li 					{float:left; width:75px; cursor:pointer; position:relative; height:15px;}
+ul.TimePicker li ul li:last-child			{border-bottom:1px solid lightgray; }
+										
+										
+/* secondary list */
+ul.TimePicker li ul li ul li 				{float:none; z-index:10; background:white; color:#444; width:60px; 
+										padding:2px; border:1px solid lightgray; 
+										background: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#eee));
+										background-image: -moz-linear-gradient(top, #f5f5f5, #eee);
+										
+										}
+ul.TimePicker li ul li ul li:hover 			{background:gray;}
+ul.TimePicker li.arrow 				{width:10px; padding:2px; border:1px solid lightgray; }
+ul.TimePicker li.arrow:hover				{color:white;background:gray;}
+										
+ul.TimePicker li ul li+li.arrow:hover ul 	{display:block; left:10px; top:9px; background:gray; color:white;}
+ul.TimePicker ul ul 					{position:absolute; display:none; left:100px;}
 
 
 
