started reminders but not sure how to schedule tasks. iron worker? minor but nice style change in calendar entry items.

--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -403,6 +403,11 @@ table .altrow td {
 #	background: #f5f5f5;
 }
 
+
+.entryLink {font:bold 10px arial;}
+
+
+
 table.calendarHdr{
 	background: #000;
 	vertical-align: top;
