--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -85,6 +85,12 @@ form.neatForm label{
 	float:left; width:80px; font-weight:bold;
 }
 
+.neatFormNormal{
+	padding-left:30px; float:left; width:70px; font-weight:normal;
+}
+
+
+
 
 ul.buttonList {
 	list-style:none;
