--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -81,18 +81,29 @@ form.neatForm label{
 	float:left;
 	width:120px;
 	font-weight:bold;
+
 }
 
-.neatForm70{
+.neatForm70 label{
 	float:left; width:70px; font-weight:bold;
+}
+.neatForm70 input{
+	clear:both;
 }
 
 .neatForm80{
 	float:left; width:80px; font-weight:bold;
 }
 
-.neatFormNormal{
-	padding-left:30px; float:left; width:70px; font-weight:normal;
+
+.neatFormNormal label{
+	line-height:25px;
+	padding-left:30px; 
+	float:left; width:70px; font-weight:normal;
+}
+
+.neatFormNormal input{
+	
 }
 
 
@@ -383,7 +394,7 @@ table {
 
 
 table.calendarHdr{
-	#border: solid 1px white;
+	border:solid 1px white;
 	align:center;
 	width: 100%;
 	height: 15px;
@@ -439,6 +450,7 @@ td.calendarHdr{
 }
 
 
+
 td.calendarCell{
 	border: 1px solid #ccc;
 	padding: 0px;
@@ -448,11 +460,13 @@ td.calendarCell{
 }
 
 td.calendarCell div.monthCellHdr{
-
+	margin:1px;
 }
 
 td.calendarCell div.monthCellHdr:hover{
 	background:#f5f5f5;
+	margin:0px;
+	border:1px solid gray;
 }
 
 div.monthCellHdr .arrow{
@@ -510,7 +524,7 @@ td.hourCellWeekView{
 
 
 
-table.weektable tr:nth-child(odd) td.hourCellWeekView {
+table.weektable tr.hourCellRow:nth-child(odd) td.hourCellWeekView {
 	background: #fff5bb;
 }
 
@@ -538,37 +552,54 @@ td.hourCell, .hourCellHdr{
 	border: 1px;
 	border-style:solid;
 	border-color:gray;
-	border-color:#eeeeee;
+	border-color:#eee;
 	padding: 0px;
 	width: 120px;
 	height: 35px;
 	background:white;
 }
 
-td.dlg_hourCell, .dlg_hourCellHdr{
-	border: 1px;
-	border-style:solid;
-	border-color:gray;
-	border-color:#eeeeee;
-	padding: 0px;
-	width: 50px;
-	height: 10px;
-	background:white;
-}
-
-.dlg_hourCellHdr{
-	font: normal 10px arial;
+td.hourCell:hover, .dlg_hour_cell:hover {
+	background: #f5f5f5;
 }
 
 
-td.hourCell:hover{
-	background: #e5e5f5;
-}
 
 
-table.dlg_hoursTableClass{
-	width:200px;
-}
+	.dlg_day_view_table{background:white; width:250px;}
+	.dlg_day_view_hdr{background:black; color:white; font:bold 11px helvetica; width:100%;}
+	.dlg_hour_cell {background:white; width:30%;
+			border-bottom-width:1px;
+			border-bottom-style:solid;
+			border-bottom-color:lightgray;
+			border-left-width:1px;
+			border-left-style:solid;
+			border-left-color:lightgray;
+			}
+	.dlg_hour_cell_hdr{color:gray; background:#ffc; font:bold 11px helvetica; width:100%; width:20%;
+			border-bottom-width:1px;
+			border-bottom-style:solid;
+			border-bottom-color:lightgray;
+			}
+	.dlg_all_day_cell{
+		font:bold 11px helvetica;
+		background:#f96;}
+	
+	
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -600,42 +631,9 @@ table tr:nth-child(even) td.hourCellHdr
 	color:#fff;
 }
 
-/** Paging **/
-div.paging {
-	background:#fff;
-	color: #ccc;
-	margin-top: 1em;
-	clear:both;
-}
-div.paging span.disabled {
-	color: #ddd;
-	display: inline;
-}
-div.paging span.current {
-	color: #c73e14;
-}
-div.paging span a {
-}
 
-/** Scaffold View **/
-dl {
-	line-height: 2em;
-	margin: 0em 0em;
-	width: 60%;
-}
-dl .altrow {
-	background: #f4f4f4;
-}
-dt {
-	font-weight: bold;
-	padding-left: 4px;
-	vertical-align: top;
-}
-dd {
-	margin-left: 10em;
-	margin-top: -2em;
-	vertical-align: top;
-}
+
+
 
 /** Forms **/
 
