--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -314,7 +314,7 @@ h4 {
 body {
 	background:lightgray;
 	background: -webkit-gradient(linear, left top, left bottom, from(#aaa), to(#ddd));
-	background-image: -moz-linear-gradient(top, #eeeeee, #dddddd);
+	background-image: -moz-linear-gradient(top, #ccc, #bbb);
 	#background: #003d4c;
 	#background: black;
 	color: #fff;
@@ -330,10 +330,11 @@ body {
 
 
 #header{
-	background:gray;
+	#background:#d95;
+	background:#864;
 	padding: 10px 20px 0px 5px;
 	background: -webkit-gradient(linear, left top, left bottom, from(#888), to(#ccc));
-	background-image: -moz-linear-gradient(top, #ccc, #eee);
+	background-image: -moz-linear-gradient(top, #aaa, #999);
 	
 }
 
