--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -14,26 +14,27 @@
 
 body {
 	background: #f5f5f5;
-	color: #fff;
 	font-family:'lucida grande',verdana,helvetica,arial,sans-serif;
 	font-size:90%;
 	margin: 0;
 	height: 100%;
+	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#e5e5e5));
+	background-image: -moz-linear-gradient(top, #fff, #e5e5e5);
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
 
 
 #header{
-	background:#864;
-	padding: 10px 20px 0px 5px;
+	background:black;
+	padding: 10px 20px 10px 5px;
 	background: -webkit-gradient(linear, left top, left bottom, from(#888), to(#ccc));
-	background-image: -moz-linear-gradient(top, #aaa, #999);
+	background-image: -moz-linear-gradient(top, #777, #888);
 	
 }
 
 #header a {
-	color: black;
+	color: white;
 	text-decoration: none;
 }
 #header a:hover {
